[package]
name = "lanqr"
version = "0.1.0"
edition = "2021"
description = "Print a QR code of your LAN address in the terminal."
license = "MIT"
repository = "https://github.com/bunlongheng/lanqr"
readme = "README.md"
keywords = ["qr", "qrcode", "lan", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
qrcode = "0.14"

[profile.release]
strip = true
opt-level = "z"
lto = true
